# Intelligent-Support-with-Personalized-Recommendations

./: .profiles.json  README.md  main.py  pyproject.toml  pytest.ini
docs/: aboutus.md  contracts.md  disputes.md  fees.md  freelancer.md  onboarding.md  payments.md  roadmap.md  services.md
scripts/: run_ragas_eval.py  run_ragas_eval_profiles.py
src/app/: __init__.py  deps.py
src/app/api/v1/: routes.py
src/app/services/: rag.py  recommender.py
src/app/static/: index.html
src/app/tools/: mood.py
src/shakers_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  profile_eval.jsonl  qa_eval.jsonl  synthetic_query_histories.json  synthetic_user_profiles.json  test_retriever.py
