[build-system]                      # ---- PEP 517
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]                           # ---- PEP 621
name = "shakers_rag"
version = "0.1.0"
description = "Retrieval-augmented Q&A + recommender demo for the Shakers challenge"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

# ── Runtime dependencies ────────────────────────────────────────────────
dependencies = [
  "fastapi>=0.111",                 # ASGI framework
  "uvicorn[standard]>=0.29",        # production server
  "langchain-openai>=0.1.18",       # embeddings + LLM wrappers
  "langchain-community>=0.0.36",
  "chromadb>=0.4.24",               # vector store
  "python-dotenv>=1.0",
  "numpy>=1.23",
  "textblob>=0.19.0",               # sentiment EN
  "langdetect>=1.0.9",              # idioma auto-detect
  "pysentimiento>=0.7.0",           # sentiment ES (RoBERTuito)
]

[project.optional-dependencies]     # pip install .[dev]
dev = ["pytest", "black", "ruff", "ragas"]

[project.scripts]                   # $ shakers-rag
shakers-rag = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
